# open-paper-trading-mcp

./: .coveragerc  .dockerignore  .env.example  .gitignore  .output.txt  .pre-commit-config.yaml  ACCOUNT_CREATION_TESTS_SUMMARY.md  ACCOUNT_ERROR_HANDLING_TESTS.md  CLAUDE.md  CONTRIBUTING.md  DATA_TODO.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.test  EVAL_PROCESS.md  FLOW.md  FRONTEND_INTEGRATION.md  FRONTEND_TODO.md  GEMINI.md  IMPORT_CHECK_RESULTS.md  JOURNEY_MARKS_SUMMARY.md  MCP_TOOLS_IMPLEMENTATION_COMPLETE.md  MCP_TOOLS_TRADINGSERVICE_MAPPING.md  PAPERBROKER_MIGRATION.md  QA_TESTING_COVERAGE_ANALYSIS.md  QA_VALIDATION_REPORT.md  README.md  REFACTORING_TODO.md  TODO.md  TRADING_SERVICE_COVERAGE_ANALYSIS.md  USER_TESTING_SCRIPT.md  alembic.ini  analyze_dependencies.py  coverage.json  docker-compose.dev.yml  docker-compose.yml  fastapi_server.py  mcp_server.py  pyproject.toml  pytest.ini  (+7 more)
.github/workflows/: ci.yml
PRD_files/: MCP_TOOLS.md  database_erd.md  front_end_spec.mc  key_entity_properties.md  style_guide.html
alembic/: env.py
alembic/versions/: 001_constrain_account_id_to_10_chars.py  002_add_starting_balance_to_accounts.py  003_update_default_starting_balance.py  85471114549d_add_users_table.py
app/: main.py  main_simple.py  mcp_clean.py  mcp_server.py  mcp_server_minimal.py  mcp_simple.py  mcp_tools.py
app/adapters/: __init__.py  accounts.py  base.py  cache.py  config.py  markets.py  robinhood.py  synthetic_data.py  synthetic_data_db.py  test_data.py  test_data_db.py  test_data_validator.py
app/api/: __init__.py  routes.py
app/auth/: config.py  robinhood_auth.py  session_manager.py
app/core/: config.py  container.py  dependencies.py  exceptions.py  id_utils.py  logging.py  service_factory.py  user_context.py
app/mcp/: account_tools.py  advanced_market_data_tools.py  advanced_options_tools.py  advanced_order_tools.py  base.py  core_tools.py  http_transport.py  market_data_tools.py  options_tools.py  portfolio_analytics_tools.py  response_utils.py  risk_management_tools.py  server.py  server_full.py.bak  tools.py  trading_tools.py
app/models/: assets.py  quotes.py  trading.py
app/schemas/: __init__.py  accounts.py  orders.py  positions.py  trading.py  users.py  validation.py
app/services/: advanced_validation.py  auth_service.py  database_indexes.py  estimators.py  expiration.py  greeks.py  margin.py  market_impact.py  order_conversion.py  order_execution.py  order_execution_engine.py  order_impact.py  order_lifecycle.py  order_notifications.py  order_queue.py  order_state_tracker.py  order_validation_advanced.py  paperbroker.py  performance_benchmarks.py  portfolio_risk_metrics.py  position_sizing.py  pre_trade_risk.py  query_optimization.py  risk_analysis.py  strategies.py  strategy_grouping.py  trading_service.py  validation.py
app/storage/: database.py
app/utils/: schema_converters.py
data/: README.md
examples/: api_usage_examples.py  options_strategies.py  performance_testing.py
examples/google_adk_agent/: __init__.py  agent.py  prompts.py  requirements.txt
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  theme.ts  types.ts
notes/: FINAL_VERIFICATION_REPORT.md  FRONTEND_ACCOUNT_INTEGRATION.md  MCP_IMPLEMENTATION_SUMMARY.md  README-development.md  analyze_missing_tools.py  dev-start.sh  docker-compose.override.yml.bak  health-test.html  reconcile_mcp_tools.py  test_mcp_imports.py  test_mcp_tools.py  verify_spec_compliance.py
paperbroker_reference/: server.py  setup.py  usage.py
paperbroker_reference/paperbroker/: OrderImpact.py  PaperBroker.py  __init__.py  accounts.py  assets.py  estimators.py  orders.py  positions.py  quotes.py
scripts/: analyze_dependencies.py  check_imports.py  check_missing_classes.py  create_scenarios.py  data_loader.py  dev.py  fix_test_imports.py  load_user_profile.py  migrate_test_data.py  optimize_database.py  run_adk_eval.sh  serve_frontend.py  server_health.py  setup_test_db.py  test_adk_setup.py  test_db_adapter.py  validate_phase1.py
tests/: conftest.py  test_mcp_server_health.py  test_mcp_tools_comprehensive.py  test_paperbroker_migration.py  test_priority1_comprehensive.py  test_priority1_core.py  test_priority1_minimal.py  test_priority1_performance.py
tests/adapters/: test_accounts_integration.py  test_cache_integration.py  test_config_integration.py  test_data_integration.py  test_external_integration.py  test_factory_registry_integration.py  test_performance_integration.py  test_validator_integration.py
tests/e2e/: conftest.py  test_database_state.py  test_health_endpoints.py  test_order_flow.py
tests/edge_cases/: test_market_conditions_edge_cases.py
tests/evals/: 1_acc_get_account_balance_test.json  1_acc_get_all_accounts_test.json  1_acc_get_portfolio_summary_test.json  1_acc_get_portfolio_test.json  1_acc_health_check_test.json  1_acc_list_tools_test.json  2_mkt_price_history_test.json  2_mkt_stock_events_test.json  2_mkt_stock_price_test.json  2_mkt_stock_ratings_test.json  3_stk_buy_stock_limit_test.json  3_stk_sell_stock_limit_test.json  3_stk_sell_stock_stop_limit_test.json  4_opt_option_expirations_test.json  5_ord_open_option_orders_test.json  5_ord_open_stock_orders_test.json  5_ord_options_orders_test.json  5_ord_stock_orders_test.json  8_opt_buy_option_limit_test.json  8_opt_find_options_test.json  8_opt_option_chain_test.json  9_can_cancel_all_option_orders_test.json  9_can_cancel_all_stock_orders_test.json  9_can_cancel_option_order_test.json  9_can_cancel_stock_order_test.json  ADK-testing-evals.md  __init__.py  acc_get_account_balance_test.json  acc_get_all_accounts_test.json  acc_get_portfolio_test.json  acc_health_check_test.json  acc_list_tools_test.json  acc_positions_test.json  account_details_test.json  can_cancel_all_option_orders_test.json  can_cancel_all_stock_orders_test.json  can_cancel_option_order_test.json  can_cancel_stock_order_test.json  get_account_balance_test.json  get_account_info_test.json  (+34 more)
tests/integration/: __init__.py  test_account_integration.py  (+6 more)
(+349 files in other folders)
