[project]
name = "open-paper-trading-mcp"
version = "0.1.0"
description = "Open Paper Trading MCP - A dual-interface paper trading simulation platform"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Wes Etheredge", email = "jwesleye@gmail.com" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "robin-stocks>=3.1.0",
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.40.0",
    "anyio>=4.5.0",
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",
    "jsonschema>=4.20.0",
    "sse-starlette>=1.6.1",
    "mcp>=1.0.0",
    "cryptography>=41.0.0",
    "pyotp>=2.9.0",
    "ecdsa>=0.18.0",
    "greenlet>=3.0.0",
    "authlib>=1.5.2",
    "cyclopts>=3.0.0",
    "exceptiongroup>=1.2.2",
    "openapi-pydantic>=0.5.1",
    "pyperclip>=1.9.0",
    "rich>=13.9.4",
    "alembic>=1.13.0",
    "mako>=1.3.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pluggy>=1.5.0",
    "iniconfig>=2.0.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "reference_code*", "examples*"]

[tool.pytest.ini_options]
pythonpath = [".", "app"]
asyncio_mode = "auto"
norecursedirs = "reference_code"
markers = [
    "asyncio"
]

[tool.mypy]
python_version = "3.11"
exclude = [
    "reference_code/",
    "examples/",
]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]