[project]
name = "open-paper-trading-mcp"
version = "0.1.0"
description = "Open Paper Trading MCP - A dual-interface paper trading simulation platform"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Wes Etheredge", email = "jwesleye@gmail.com" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "robin-stocks>=3.1.0",
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "alembic>=1.13.0",
    "aiohttp>=3.9.1",
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "pytz>=2023.3.post1",
    "google-api-python-client>=2.108.0",
    "toml>=0.10.2",
    "psutil>=5.9.6",
    "passlib[bcrypt]>=1.7.4",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "mypy>=1.17.0",
    "types-toml>=0.10.8.20240310",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "types-pytz>=2024.1.0.20240203"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "reference_code*", "examples*"]

# Pytest configuration moved to pytest.ini to avoid conflicts

[tool.mypy]
python_version = "3.11"
exclude = [
    "reference_code/",
    "examples/",
]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

